# space_fortress

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  create-release.yml  deploy-itchio.yml
design/: designdoc.md
docs/: ART-ASSETS.md  BUGS.md  DEVELOPMENT-PLAN.md  FRAMEWORK-DEVELOPMENT-GUIDE.md
docs/design/: ARTIFACT-PLAN.md  CARD-BATTLE-REDESIGN.md  DIPLOMACY-SYSTEM-REDESIGN.md  GAME-RULES.md  MVP-ANALYSIS.md  NARRATIVE_FLOW.md  SESSION-STATE-ASSESSMENT.md
docs/design/components/: COMPONENTS.md
docs/design/events/: CORE-LOOP-EVENT-MODEL.md  EVENT-CATALOG.md  EXPANDED-SLICES.md  FEATURE-AREAS.md
docs/design/releases/: RELEASE_ITCHIO.md
docs/design/screens/: SCREENS.md
docs/design/slices/: IMPLEMENTATION-STATUS.md  README.md  SLICE-01-ACCEPT-QUEST.md  SLICE-02-MAKE-CHOICE.md  SLICE-03-FORM-ALLIANCE.md  SLICE-04-CARD-SELECTION.md  SLICE-05-DEPLOYMENT.md  SLICE-06-BATTLE-RESOLUTION.md  SLICE-07-MEDIATION.md  SLICE-08-CONSEQUENCE.md  SLICE-09-ABILITY-EFFECTS.md
docs/testing/: NAVIGATION-REMEDIATION-PLAN.md  PLAYER-JOURNEYS.md
e2e/: gameplay.spec.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_event_store.sql
src-tauri/src/: lib.rs  main.rs
src/lib/: debug.ts
src/lib/components/: index.ts  (+18 more)
src/routes/: +layout.svelte  +page.svelte
tests/e2e/: card-economy-edge-cases.spec.ts  complete-playthrough.spec.ts  full-playthrough.spec.ts  gameplay.spec.ts  navigation.spec.ts  player-communication.spec.ts  player-journey-stuck-states.spec.ts  url-edge-cases.spec.ts
(+131 files in other folders)
